deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "foobar-api"
  namespace: "foobar-api"
  labels:
    app: "foobar-api"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "foobar-api"
  template:
    metadata:
      labels:
        app: "foobar-api"
    spec:
      containers:
      - name: "program-api-1"
        image: "gcr.io/neon-circle-344012/github.com/runtux/program-api:$SHORT_SHA"
