foobar-api-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  creationTimestamp: "2022-03-15T16:51:59Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: foobar-api
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:externalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2022-03-15T16:51:59Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:finalizers:
          .: {}
          v:"service.kubernetes.io/load-balancer-cleanup": {}
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: kube-controller-manager
    operation: Update
    time: "2022-03-15T16:52:47Z"
  name: foobar-api-service
  namespace: foobar-api
  resourceVersion: "1729082"
  uid: f4090edc-3221-4616-89f6-2938828ee237
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.68.0.245
  clusterIPs:
  - 10.68.0.245
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31103
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: foobar-api
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 34.68.179.98
